@@ -1,3 +1,6 @@
+Thu Mar 24 2005  Anton Kokalj (tone.kokalj@ijs.si)
+	* pw.tcl, pw-help.tcl: adding the pwscf's wf_collect variable
+
 Wed Mar 23 2005  Anton Kokalj (tone.kokalj@ijs.si)
 	* pw.tcl, pw-help.tcl: pw.x module updated to syntax of PWscf-2.1.2
 	* pp.tcl, pp-help.tcl: pp.x module slightly updated to syntax of
